# Parallel-Programming-Labs

./: README.md
Jacobi-Method-Solver/: .gitignore  CMakeLists.txt  Jacobi-Method-Solver.cpp
Linpack-Tester/: .gitignore  CMakeLists.txt  LinpackResult.cpp  LinpackResult.h  LinpackTester.hpp  Matrix.cpp  Matrix.hpp  MatrixTest.cpp  README.md  SimpleIterationParallelTester.hpp  SimpleIterationTester.hpp  main.cpp  matrix_error.hpp  run.sh
Load-Balancer/: .gitignore  build.sh  load-balancer.cpp  run.sh
Parallel-Matrix-Multiplier-OpenMP/: .gitignore  CMakeLists.txt  individualSections.cpp  oneSection.cpp
